grails-app/assets/stylesheets/app/styles.less
/* ... */
@media (min-width:768px){
  .wizard {
    .steps{
    }
    .steps-indicator {
    }
    .modal-body > form > div.row {
      background: @light-bg;
    }
  }
}

.atwho-view {
  border-radius: 0px;
  border-color: @brand-primary;
  box-shadow: rgba(0, 0, 0, 0.14902) 0px 4px 5px 0px;
  .cur {
    background: @brand-primary;
  }
  strong {
    color: #000;
  }
  ul {
    box-shadow: inset 0 1px 2px rgba(0,0,0,.3);
    padding: 4px;
    li {
      border: none;
    }
  }
}

.drop-zone {
  display:none;
}

.table.attachments {
  margin-bottom:0;
  .filename {
    .text-overflow();
  }
}

.drop-enabled {
  .drop-zone {
    .make-md-column(5);
    .make-lg-column(4);
    background-color:#fff;
    border:3px dashed @gray;
    color:@gray-darker;
    position: fixed;
    display:block;
    opacity: 0.9;
    top:@fromTop;
    z-index:100;
    bottom:0;
    right:0;
    h2 {
      text-align: center;
      .vertical-align();
      position: absolute;
      right:0;
      left:0;
      margin:0;
    }
  }
}

.pdf-viewer {
    overflow: auto;
    max-height: 600px;
}

#user-avatar {
  .choose-file {
    display:inline;
    .btn {
      padding:7px;
      font-size: 18px;
      cursor: pointer;
    }
    cursor: pointer;
  }
  img {
    padding:3px;
    height: 40px;
    width: 40px;
    display: inline-block;
  }
  img.selected {
    padding:0px;
    border:3px solid @brand-primary;
  }
}

ul.dropdown-menu[datepicker-popup-wrap]{
  padding:6px;
}

.typeahead {
    .input-group-addon {
      &>i.fa-close {
        cursor:pointer;
      }
    }
}

.list-users {
  .well;
  padding:2px;
  margin-top:18px;
  .user {
    border:1px solid @legend-border-color;
    background:#fff;
    padding: 2px 4px;
    margin: 2px;
    display:inline-block;
    .name {
      padding-left: 5px;
      padding-right:5px;
      display:inline-block;
      vertical-align: middle;
    }
    .btn {
      cursor:pointer;
    }
  }
}

.import {
  .changes {
    //TODO add make-row and remove row class in html
    &:extend(.clearfix all);
    .erase {
      .form-group;
      .checkbox;
      .make-xs-column(6);
    }
    .changes-col-1 {
      .form-group;
      .make-xs-column(5);
    }
    .changes-col-2 {
      .form-group;
      .make-xs-column(6);
    }
    .changes-arrow {
      text-align:center;
      padding-top:28px;
      .make-xs-column(1);
    }
  }
}

.dropdown-toggle {
  cursor: pointer;
}

.notification {
  position: absolute;
  right: 0;
  left: 0;
  margin: 4px 0;
  text-align: center;
  background: none;
  z-index:100;
  div {
    position: relative;
    display: inline-block;
    margin: 0 auto;

    border:1px solid rgb(240, 195, 109);
    background-color: rgb(249, 237, 190);
    font-size: 13px;
    font-weight: bold;
    padding:2px 8px 2px 8px;

    -webkit-transition: opacity 0.5s ease-out 4s;
    -moz-transition: opacity 0.5s ease-out 4s;
    -o-transition: opacity 0.5s ease-out 4s;
    transition: opacity 0.5s ease-out 4s;
  }
  .notification-error {
    background-color: #DD8181;
    border: 1px solid #D54B4B;
  }
  .notification-success {
    background-color: #b2dd9b;
    border: 1px solid #9cc187;
  }
  .notification-close {
    cursor:pointer;
  }

  a {
    cursor: pointer;
    text-decoration: underline;
  }
}

.handle {
  font-family: "Tahoma";
  font-size:13px;
  cursor:move;
  font-weight: bold;
  visibility: hidden;
}

.mixin-shadow-stack(@stacks){
  > div:nth-child(n) {
    border-left: 1px solid rgb(229, 229, 229);
    z-index:11;
  }
  @nselector:~"-n+@{stacks}";
  > div:nth-child(@nselector) {
    border-left:none;
    box-shadow:  -5px 0 5px -5px #1f4164;
    -moz-box-shadow: -5px 0 5px -5px #1f4164;
    -webkit-box-shadow: -5px 0 5px -5px #1f4164;
  }
}

.mixin-opacity-stack(@opacity){
  &:hover {
    cursor:pointer;
  }
  &:after {
    visibility: visible;
    background : rgba(0,0,0,@opacity);
  }
}

.mixin-one-stack(){
  > div:nth-child(1) {
    .make-lg-column(12);
  }
  > div:nth-child(2) {
    .make-md-column(5);
    .make-lg-column(4);
    .make-md-column-offset(12);
    .make-lg-column-offset(12);

  }
  > div:nth-child(3) {
    .make-md-column(5);
    .make-lg-column(4);
    .make-md-column-offset(12);
    .make-lg-column-offset(12);
  }
  > div:nth-child(4) {
    .make-md-column(5);
    .make-lg-column(4);
    .make-md-column-offset(12);
    .make-lg-column-offset(12);
  }
}

.mixin-two-stacks(){
  .mixin-one-stack();
  > div:nth-child(1) {
    .make-md-column(7);
    .make-lg-column(8);
  }
  > div:nth-child(2) {
    .make-md-column-offset(7);
    .make-lg-column-offset(8);
  }
}

.mixin-three-stacks(){
  .mixin-two-stacks();
  > div:nth-child(1) {
    overflow: hidden !important;
    .mixin-opacity-stack(0.5);
  }
  > div:nth-child(2) {
    .make-md-column-offset(2);
    .make-lg-column-offset(4);
  }
  > div:nth-child(3) {
    .make-md-column-offset(7);
    .make-lg-column-offset(8);
    overflow: auto;
  }
  > div:nth-child(4) {
    .make-md-column-offset(12);
    .make-lg-column-offset(12);
  }
}

.mixin-four-stacks() {
  .mixin-three-stacks();
  > div:nth-child(2) {
    .make-md-column-offset(1);
    .make-lg-column-offset(1);
    overflow: hidden !important;
    .mixin-opacity-stack(0.5);
  }
  > div:nth-child(3) {
    .make-md-column-offset(2);
    .make-lg-column-offset(4);
  }
  > div:nth-child(4) {
    .make-md-column-offset(7);
    .make-lg-column-offset(8);
  }
}
/* ... */

